# algo-rs

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  docker.yml  release.yml
docs/: development.md
scripts/: new_problem.rs
src/: lib.rs
src/problems/: mod.rs  p00001_two_sum.rs  p00002_add_two_numbers.rs
tests/: test_p00001_two_sum.rs  test_p00002_add_two_numbers.rs
